Message.java, ChatActivity & Activity_chat (almost working)

--- a/TwoChange/app/src/main/res/values/strings.xml
+++ b/TwoChange/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">2Change</string>
     <string name="title_activity_main">MainActivity</string>
+    <string name="title_activity_chat">ChatActivity</string>
 </resources>
