--- a/TwoChange/app/src/main/res/values/strings.xml
+++ b/TwoChange/app/src/main/res/values/strings.xml
@@ -2,4 +2,22 @@
     <string name="app_name">2Change</string>
     <string name="title_activity_main">MainActivity</string>
     <string name="title_activity_post_ad">PostAdActivity</string>
+
+    <string name="ad_publish">Publish</string>
+    <string name="ad_title">Title</string>
+    <string name="ad_description">Description</string>
+    <string name="ad_add_images">Add some images to you ad!</string>
+    <string name="ad_product_info">Product info</string>
+    <string name="ad_year">Year</string>
+    <string name="ad_original_price">Original price (€)</string>
+    <string name="ad_state_label">State</string>
+    <string name="ad_estimated_rating">Estimated rating</string>
+
+    <string-array name="product_states">
+        <item>New - Still in the original package</item>
+        <item>Almost new - Very few or no usage marks</item>
+        <item>Good - Normal usage marks</item>
+        <item>Regular - Heavy usage marks</item>
+        <item>Broken - Not woking or unusable</item>
+    </string-array>
 </resources>
