--- a/TwoChange/app/src/main/res/values/strings.xml
+++ b/TwoChange/app/src/main/res/values/strings.xml
@@ -138,6 +138,7 @@
     <string name="action_add">Add Item</string>
     <string name="action_edit">Edit Item</string>
     <string name="action_delete">Delete Item</string>
+    <string name="action_match">Make match</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
