Fragment Manager, vistas en fragments, comunicación entre fragment i activity, separar capa de dominio de la activity, cambiar tipo de lista. NO TESTED

--- a/TwoChange/app/src/main/res/values/strings.xml
+++ b/TwoChange/app/src/main/res/values/strings.xml
@@ -133,5 +133,6 @@
     <string name="title_activity_ad_lists">AdListsActivity</string>
     <string name="offered">Offered</string>
     <string name="wanted">Wanted</string>
+    <string name="product_item_row_image_description">Product item Image for lists</string>
 
 </resources>
