--- a/TwoChange/app/src/main/res/values/strings.xml
+++ b/TwoChange/app/src/main/res/values/strings.xml
@@ -152,5 +152,14 @@
     <string name="offered">Offered</string>
     <string name="wanted">Wanted</string>
     <string name="product_item_row_image_description">Product item Image for lists</string>
+    <string name="adlists_title">My lists</string>
+    <string name="explore">Explore</string>
+    <string name="ads">Ads</string>
+    <string name="chat">Chat</string>
+    <string name="profile">Profile</string>
+    <string name="settings">Settings</string>
+    <string name="help">Help</string>
+    <string name="about">About</string>
+    <string name="logout">Logout</string>
 
 </resources>
