--- a/TwoChange/app/src/main/res/values/strings.xml
+++ b/TwoChange/app/src/main/res/values/strings.xml
@@ -156,7 +156,7 @@
     <string name="product_item_row_image_description">Product item Image for lists</string>
     <string name="ad_list_title">My lists</string>
     <string name="explore">Explore</string>
-    <string name="ads">Ads</string>
+    <string name="my_lists">My lists</string>
     <string name="chat">Chat</string>
     <string name="profile">Profile</string>
     <string name="settings">Settings</string>
