--- a/TwoChange/app/src/main/res/values/strings.xml
+++ b/TwoChange/app/src/main/res/values/strings.xml
@@ -159,7 +159,7 @@
     <string name="my_lists">My lists</string>
     <string name="chat">Chat</string>
     <string name="profile">Profile</string>
-    <string name="settings">Settings</string>
+    <string name="searchProfile">Search profile</string>
     <string name="help">Help</string>
     <string name="about">About 2Change</string>
     <string name="logout">Logout</string>
