--- a/TwoChange/app/src/main/res/values/strings.xml
+++ b/TwoChange/app/src/main/res/values/strings.xml
@@ -179,6 +179,7 @@
     <string name="year_hint">When did you bought it</string>
     <string name="add_image">add_image</string>
     <string name="post_product">Post product</string>
+    <string name="save_changes">Save changes</string>
     <string name="image_hint">Add some images of your product</string>
     <string name="ok">Ok</string>
     <string name="product_s_price">How much did it cost? (€)</string>
