--- a/TwoChange/app/src/main/res/values/strings.xml
+++ b/TwoChange/app/src/main/res/values/strings.xml
@@ -41,6 +41,7 @@
         <item>Instruments</item>
         <item>Toys</item>
         <item>Books</item>
+        <item>Services</item>
         <item>Others</item>
     </string-array>
 
