Edit product navigation

--- a/TwoChange/app/src/main/res/values/strings.xml
+++ b/TwoChange/app/src/main/res/values/strings.xml
@@ -207,5 +207,6 @@
     <string name="about_url"><a>https://github.com/visape-uni/PES_2Change</a></string>
     <string name="filter_by_category">Filter by category</string>
     <string name="filter_by_rate">Filter by rate</string>
+    <string name="edit">Edit</string>
 
 </resources>
